# sdl2-clion-template

./: CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
